# DataScienceCapstone2

./: Makefile  README.md  pyproject.toml
DataScienceCapstone2/: __init__.py  dataset.py  features.py  plots.py
DataScienceCapstone2/modeling/: predict.py  train.py
data/processed/: heart_attack_prediction_dataset_cleaned.csv  heart_attack_prediction_dataset_encoded.csv  heart_attack_prediction_dataset_selected_features.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 02_data_wrangling.ipynb  03_exploratory_data_analysis.ipynb  04_preprocessing_and_training.ipynb  05_modeling.ipynb  data_story_telling.ipynb  modelling.ipynb
reports/: Capstone 2 Project Presentation.pptx  Guided Capstone Project Report.docx
