[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "DataScienceCapstone2"
version = "0.0.1"
description = "Data Science Capstone 2 Project"
authors = [
  { name = "Nilesh Suresh" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["DataScienceCapstone2"]
force_sort_within_sections = true
